Fixes to the path choosing screen and improvements to "Open in IDE"